chore: replace HTTP library I've done some research into Java HTTP libraries, and found out that there is actually a modern HTTP library in the Java standard.